WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122450
[CSS Regions] Widows don't work if the first line in a region is aligned with the top of the region
https://bugs.webkit.org/show_bug.cgi?id=122450
Summary
[CSS Regions] Widows don't work if the first line in a region is aligned with...
Andrei Bucur
Reported
2013-10-07 07:49:44 PDT
Created
attachment 213582
[details]
Repro See repro.
Attachments
Repro
(1.53 KB, text/html)
2013-10-07 07:49 PDT
,
Andrei Bucur
no flags
Details
Patch
(13.56 KB, patch)
2013-10-07 08:22 PDT
,
Andrei Bucur
no flags
Details
Formatted Diff
Diff
Patch
(13.72 KB, patch)
2013-10-07 08:57 PDT
,
Andrei Bucur
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andrei Bucur
Comment 1
2013-10-07 08:22:02 PDT
Created
attachment 213586
[details]
Patch
Build Bot
Comment 2
2013-10-07 08:51:15 PDT
Comment on
attachment 213586
[details]
Patch
Attachment 213586
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/3666022
EFL EWS Bot
Comment 3
2013-10-07 08:54:57 PDT
Comment on
attachment 213586
[details]
Patch
Attachment 213586
[details]
did not pass efl-ews (efl): Output:
http://webkit-queues.appspot.com/results/3667020
Andrei Bucur
Comment 4
2013-10-07 08:57:24 PDT
Created
attachment 213593
[details]
Patch
Dave Hyatt
Comment 5
2013-10-08 10:04:09 PDT
Comment on
attachment 213593
[details]
Patch r=me
WebKit Commit Bot
Comment 6
2013-10-08 10:31:38 PDT
Comment on
attachment 213593
[details]
Patch Clearing flags on attachment: 213593 Committed
r157120
: <
http://trac.webkit.org/changeset/157120
>
WebKit Commit Bot
Comment 7
2013-10-08 10:31:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug